[package]
name = "html5ever-glue"
version = "0.1.0"
authors = ["Theodore Dubois <tblodt@icloud.com>"]

[lib]
name = "html5ever_glue"
path = "glue.rs"
crate-type = ["staticlib"]
test = false

[dependencies]
libc = "*"
html5ever = "^0.13"
html5ever-atoms = "^0.2"
tendril = "^0.2.2"
string_cache = "^0.4"
